# PhageFilter

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: benchmarking_tests.yaml  rust.yml  rust_coverage.yml
benchmarking/: README.md  bench.py  benchmarking_analysis.ipynb  config.yaml  download_tools.sh  mac_download_tools.sh  simulate_reads.py  test_output.py
benchmarking/bench/: benchmarking_tests.py  simulate_reads.py  tools.py  utils.py
benchmarking/benchmarking_old/: test_output.py
benchmarking/linux-binaries/: CLARK-l  biobloomcategorizer  biobloommaker  biobloommicategorizer  biobloommimaker  facs  kraken2  kraken2-build  kraken2-inspect
benchmarking/readSim/: install.sh  simulate_reads.py  simulate_reads.sh
benchmarking/results/: res_MANUALTEST.csv  res_MANUALTEST2.csv  res_MANUALTEST3.csv  res_MANUALTEST4.csv  res_MANUALTEST5.csv  res_MANUALTEST7.csv  res_depth.csv  res_filter_memory.csv  res_filter_memory_all.csv  res_filter_performance.csv  res_genomes.csv  res_genomes_wJSON.csv  res_genomes_woJSON.csv  res_parameterization.csv  res_parameterization2.csv  res_parameterization3.csv  res_parameterization4.csv  res_parameterization5.csv  res_parameterization6.csv  res_performance_benchmarking.csv  res_performance_benchmarking2.csv  res_performance_benchmarking3.csv  res_performance_benchmarking_O0.csv  res_readlength.csv  res_relative_performance.csv  (+10 more)
fake_genome_dir/: fake_fasta.fa
src/: bloom_filter.rs  bloom_tree.rs  cache.rs  file_parser.rs  main.rs  query.rs  read_parser.rs  result_map.rs
(+173 files in other folders)
