[package]
name = "phage_filter"
version = "1.0.0"
edition = "2023"

[profile.release]
codegen-units = 1
lto = true

[dependencies]
bio = "*"
bincode = "1.3.3"
bitvec = { version = "1.0.1", features = ["serde"] }
rayon = "1.5.3"
clap = { version = "4.0.26", features = ["derive"] }
rand = "*"
rustc-hash = "1.1.0"
serde = "1.0.147"
clap-verbosity-flag = "2.0.0"
log = "0.4.11"
env_logger = "0.9.1"
