[package]
name = "phage_filter"
version = "1.0.0"
edition = "2021"

[profile.release]
codegen-units = 1
lto = true

[dev-dependencies]
proptest = "1.0"

[dependencies]
bio = "2.2.0"
bincode = "1.3.3"
bitvec = { version = "1.0.1", features = ["serde"] }
rayon = "1.5.3"
clap = { version = "4.0.26", features = ["derive"] }
rand = "0.8.5"
rustc-hash = "2.1"
serde = "1.0.147"
clap-verbosity-flag = "2.0.0"
log = "0.4.11"
env_logger = "0.9.1"
lru = "0.10.0"
itertools = "0.10"
flate2 = "1.0"
